# py-43784-sample

./: README.md
pycharm-package/: pyproject.toml
pycharm-package/pycharm_package/models/: __init__.py  globals.py
pycharm-package/tests/: test_pycharm_package.py
simple-script/: main.py  pyproject.toml
