[tool.poetry]
name = "simple-script"
version = "0.1.0"
description = ""
authors = ["Miguel Rasero <miguel@linos.es>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pycharm-package = {path = "../pycharm-package"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
